Gradle runs fine