@@ -27,7 +27,6 @@ compileGroovy {
     // Allow Groovy to do its grooviness
     options.forkOptions.jvmArgs << "--add-opens=java.base/java.lang=ALL-UNNAMED"
     options.forkOptions.jvmArgs << "--add-opens=java.base/java.lang.invoke=ALL-UNNAMED"
-    options.forkOptions.jvmArgs << "--add-modules=java.xml.ws.annotation"
 }
 
 test {
@@ -42,6 +41,6 @@ test {
                "--add-opens=java.base/java.util.stream=ALL-UNNAMED",
                "--add-opens=java.base/java.nio.file=ALL-UNNAMED",
                "--add-opens=java.base/java.net=ALL-UNNAMED",          
-               "--add-opens=java.base/sun.nio.fs=ALL-UNNAMED",
+               "--add-opens=java.base/sun.nio.fs=ALL-UNNAMED"
     ]
 }
